Step6 so that we got the gpt response and format to json - mapper is done